--- a/src/styles/components/block.scss
+++ b/src/styles/components/block.scss
@@ -11,7 +11,6 @@
     display: flex;
     flex-direction: column;
     line-height: 0;
-    margin-bottom: $SPACING_S;
     position: relative;
   }
 
@@ -30,7 +29,44 @@
     }
   }
 
+  &__meta-container {
+    position: relative;
+    z-index: $LAYER_RAISED;
+  }
+
+  &__meta {
+    @include transition(background-color);
+    line-height: $LINE_HEIGHT_S;
+    padding-bottom: $SPACING_S;
+    padding-right: $SPACING_S;
+  }
+
+  &__copyright {
+    line-height: $LINE_HEIGHT_S;
+    margin-top: $SPACING_S;
+
+    &#{&}--desktop {
+      display: none;
+    }
+  }
+
+  &__stats {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__stat {
+    &:first-child {
+      margin-top: $SPACING_XS;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: $SPACING_XS;
+    }
+  }
+
   &__image {
+    margin-bottom: $SPACING_S;
     order: 1;
     width: 100%;
   }
@@ -73,33 +109,6 @@
 
     &--newbie {
       width: 70%;
-    }
-  }
-
-  &__meta-container {
-    position: relative;
-    z-index: $LAYER_RAISED;
-  }
-
-  &__meta {
-    @include transition(background-color);
-    line-height: $LINE_HEIGHT_S;
-    padding-bottom: $SPACING_S;
-    padding-right: $SPACING_S;
-  }
-
-  &__stats {
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__stat {
-    &:first-child {
-      margin-top: $SPACING_XS;
-    }
-
-    &:not(:last-child) {
-      margin-bottom: $SPACING_XS;
     }
   }
 
@@ -202,6 +211,39 @@
   @include mq($from: medium) {
     &__image-container {
       display: block;
+    }
+
+    &__meta-container {
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+    }
+
+    &__meta {
+      padding-bottom: $SPACING_M;
+      padding-right: $SPACING_M;
+    }
+
+    &__copyright {
+      margin-top: 0;
+      padding-bottom: $SPACING_2XS;
+      position: absolute;
+      right: 0;
+      top: 0;
+      transform: rotate(90deg) translate(100%, -100%);
+      transform-origin: 100% 0%;
+
+      &#{&}--mobile {
+        display: none;
+      }
+
+      &#{&}--desktop {
+        display: block;
+      }
+    }
+
+    &__image {
       margin-bottom: $SPACING_M;
     }
 
@@ -217,18 +259,6 @@
       &--sons {
         width: 20%;
       }
-    }
-
-    &__meta-container {
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: 100%;
-    }
-
-    &__meta {
-      padding-bottom: $SPACING_M;
-      padding-right: $SPACING_M;
     }
 
     &__content {
