--- a/site/layouts/shortcodes/card.html
+++ b/site/layouts/shortcodes/card.html
@@ -1,5 +1,5 @@
 <!-- Shortcodes > Card. -->
-<!-- Coloured card block. -->
+<!-- Card title block. -->
 <div class="card card--{{ lower $.Page.Title }}">
   {{ if .Get "title" }}
     <h1 class="card__title">{{ .Get "title" }}</h1>
