FIX: Dark mode styles and transitions

--- a/site/layouts/partials/block.html
+++ b/site/layouts/partials/block.html
@@ -28,64 +28,66 @@
   {{ end }}
 
   <div class="block__image-container {{ $imageClasses }}">
-    <div class="block__meta-container {{ $metaContainerClasses }}">
-      <div class="block__meta {{ $metaClasses }}">
-        <h2 class="block__title">{{ .Title }}</h2>
+    {{ if (ne .Params.block_type "logos")}}
+      <div class="block__meta-container {{ $metaContainerClasses }}">
+        <div class="block__meta {{ $metaClasses }}">
+          <h2 class="block__title">{{ .Title }}</h2>
 
-        {{ if or (eq .Params.block_type "clients") (eq .Params.block_type "mountains")}}
-          <div class="block__stats sub-text">
-            <!-- Mountains stats -->
-            {{ if .Params.location }}
-              <div class="block__stat icon">
-                <span class="icon__image">
-                  {{ partial "icons/location.svg" . }}
-                </span>
+          {{ if or (eq .Params.block_type "clients") (eq .Params.block_type "mountains")}}
+            <div class="block__stats sub-text">
+              <!-- Mountains stats -->
+              {{ if .Params.location }}
+                <div class="block__stat icon">
+                  <span class="icon__image">
+                    {{ partial "icons/location.svg" . }}
+                  </span>
 
-                <span class="icon__text">
-                  {{ .Params.location }} ({{ .Params.duration }} nights)
-                </span>
-              </div>
-            {{ end }}
+                  <span class="icon__text">
+                    {{ .Params.location }} ({{ .Params.duration }} nights)
+                  </span>
+                </div>
+              {{ end }}
 
-            {{ if .Params.location }}
-              <div class="block__stat icon">
-                <span class="icon__image">
-                  {{ partial "icons/distance.svg" . }}
-                </span>
+              {{ if .Params.location }}
+                <div class="block__stat icon">
+                  <span class="icon__image">
+                    {{ partial "icons/distance.svg" . }}
+                  </span>
 
-                <span class="icon__text">
-                  {{ .Params.distance }} miles
-                </span>
-              </div>
-            {{ end }}
+                  <span class="icon__text">
+                    {{ .Params.distance }} miles
+                  </span>
+                </div>
+              {{ end }}
 
-            {{ if .Params.location }}
-              <div class="block__stat icon">
-                <span class="icon__image">
-                  {{ partial "icons/mountains.svg" . }}
-                </span>
+              {{ if .Params.location }}
+                <div class="block__stat icon">
+                  <span class="icon__image">
+                    {{ partial "icons/mountains.svg" . }}
+                  </span>
 
-                <span class="icon__text">
-                  {{ .Params.mountains }} ({{ .Params.mountains_new }} new)
-                </span>
-              </div>
-            {{ end }}
+                  <span class="icon__text">
+                    {{ .Params.mountains }} ({{ .Params.mountains_new }} new)
+                  </span>
+                </div>
+              {{ end }}
 
-            {{ if .Params.location }}
-              <div class="block__stat icon">
-                <span class="icon__image">
-                  {{ partial "icons/steps.svg" . }}
-                </span>
+              {{ if .Params.location }}
+                <div class="block__stat icon">
+                  <span class="icon__image">
+                    {{ partial "icons/steps.svg" . }}
+                  </span>
 
-                <span class="icon__text">
-                  {{ .Params.steps }} steps
-                </span>
-              </div>
-            {{ end }}
-          </div>
-        {{ end }}
+                  <span class="icon__text">
+                    {{ .Params.steps }} steps
+                  </span>
+                </div>
+              {{ end }}
+            </div>
+          {{ end }}
+        </div>
       </div>
-    </div>
+    {{ end }}
 
     {{ if (ne .Params.hide_image true)}}
       {{ if .Params.copyright }}
