--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -24,14 +24,15 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://craigbaldwin.com/">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="/images/favicon/manifest.json">
-  <link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#1b2229">
-  <link rel="shortcut icon" href="/images/favicon/favicon.ico">
-  <meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
-  <meta name="theme-color" content="#1b2229">
+  <link href="/images/favicon/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="/images/favicon/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+  <link href="/images/favicon/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+  <link href="/images/favicon/site.webmanifest" rel="manifest">
+  <link color="#1b2229" href="/images/favicon/safari-pinned-tab.svg" rel="mask-icon">
+  <link href="/images/favicon/favicon.ico" rel="shortcut icon">
+  <meta content="#1b2229" name="msapplication-TileColor">
+  <meta content="/images/favicon/browserconfig.xml" name="msapplication-config">
+  <meta content="#1b2229" name="theme-color">
 
   <title>
     {{ if (eq .Title "Index") }}
