BUILD: Changed how template colours are applied

--- a/site/layouts/_default/baseof.html
+++ b/site/layouts/_default/baseof.html
@@ -53,6 +53,7 @@
     template
     template--{{ .Layout }}
     template--{{ .Params.handle }}
+    template--{{ .Params.colour }}
     no-js
   "
 >
