--- a/src/styles/components/block.scss
+++ b/src/styles/components/block.scss
@@ -1,7 +1,7 @@
 /**
  * Components > Block.
  * ------------------------------------------------------------------------------
- * A block contains an image with text side-by-side.
+ * A block is a standardised layout element.
  *
  */
 .block {
