--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -21,6 +21,8 @@
 /**
  * Components.
  */
+@import 'components/article';
+@import 'components/articles';
 @import 'components/block';
 @import 'components/blocks';
 @import 'components/burger';
