BUILD: Updated article styles

--- a/src/styles/components/articles.scss
+++ b/src/styles/components/articles.scss
@@ -5,23 +5,14 @@
  *
  */
 .articles {
-  &__article {
-    &:not(:last-child) {
-      // Desired margin - grid gap
-      margin-bottom: ($SPACING_M - $SPACING_S);
-    }
-  }
-
   &__title {
     margin-bottom: $SPACING_P;
   }
 
-  @include mq($from: medium) {
-    &__article {
-      &:not(:last-child) {
-        // Desired margin - grid gap
-        margin-bottom: ($SPACING_M - $SPACING_S);
-      }
+  &__article {
+    &:not(:last-child) {
+      // Desired margin - grid gap
+      margin-bottom: ($SPACING_L - $SPACING_S);
     }
   }
 }
