--- a/site/layouts/_default/distances.html
+++ b/site/layouts/_default/distances.html
@@ -20,11 +20,11 @@
 
     <!-- Year summaries -->
     <div class="blocks__block articles">
-      <h2 class="articles__title">Summaries</h2>
+      <h2 class="articles__title">Of Note</h2>
 
       {{ range (.Pages.ByParam "handle").Reverse }}
         <div class="articles__article article">
-          <h3 class="article__title article__title--small">
+          <h3 class="article__title">
             {{ .Params.Handle }}
           </h3>
 
