--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -109,6 +109,12 @@
         background-color: $COLOR_BLACK;
       }
     }
+
+    .no-transition & {
+      #{$parent}__navigation {
+        visibility: hidden;
+      }
+    }
   }
 
   @include mq($from: medium) {
