FIX: Burger menu background colour transitioning on page load in dark mode

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -13,8 +13,8 @@
     </a>
 
     <button class="header__menu" js-header="menuButton">
-      <span class="burger burger--top"></span>
-      <span class="burger burger--bottom"></span>
+      <span class="burger burger--middle"></span>
+      <span class="burger burger--outside"></span>
 
       <span class="visually-hidden">Menu</span>
     </button>
