BUILD: Adjusted layout of yearly summaries

--- a/src/styles/components/articles.scss
+++ b/src/styles/components/articles.scss
@@ -11,8 +11,7 @@
 
   &__article {
     &:not(:last-child) {
-      // Desired margin - grid gap
-      margin-bottom: ($SPACING_L - $SPACING_S);
+      margin-bottom: $SPACING_P;
     }
   }
 }
