CONTENT: Standardised title casing, updated info page content

--- a/site/layouts/_default/distances.html
+++ b/site/layouts/_default/distances.html
@@ -3,7 +3,7 @@
 
   <div class="blocks">
     <div class="blocks__block chart">
-      <h2 class="chart__title">Distance By Foot (miles)</h2>
+      <h2 class="chart__title">Distance by foot (miles)</h2>
 
       <div class="chart__chart">
         <canvas js-chart="walking"></canvas>
@@ -11,7 +11,7 @@
     </div>
 
     <div class="blocks__block chart">
-      <h2 class="chart__title">Total Distances (miles)</h2>
+      <h2 class="chart__title">Total distances (miles)</h2>
 
       <div class="chart__chart">
         <canvas js-chart="total"></canvas>
@@ -20,7 +20,7 @@
 
     <!-- Year summaries -->
     <div class="blocks__block articles">
-      <h2 class="articles__title">Of Note</h2>
+      <h2 class="articles__title">Year in review</h2>
 
       {{ range (.Pages.ByParam "handle").Reverse }}
         <div class="articles__article article">
