--- a/site/layouts/shortcodes/card.html
+++ b/site/layouts/shortcodes/card.html
@@ -1,8 +1,14 @@
 <!-- Shortcodes > Card. -->
 <!-- Card title block. -->
+{{ $page := $.Page.Title }}
+
 <div class="card card--{{ lower $.Page.Title }}">
   {{ if .Get "title" }}
-    <h1 class="card__title">{{ .Get "title" }}</h1>
+    {{ if (eq $page "Index") }}
+      <h2 class="card__title h1">{{ .Get "title" }}</h2>
+    {{ else }}
+      <h1 class="card__title">{{ .Get "title" }}</h1>
+    {{ end }}
   {{ end }}
 
   <div class="row">
