--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -56,11 +56,12 @@ body {
 /**
  * Headings.
  */
-h1, h2, .h2, h3, .h3 {
+h1, .h1, h2, .h2, h3, .h3 {
   font-weight: $WEIGHT_BOLD;
 }
 
-h1 {
+h1,
+.h1 {
   font-size: 3rem;
 }
 
