--- a/src/styles/components/header.scss
+++ b/src/styles/components/header.scss
@@ -16,6 +16,12 @@
     justify-content: space-between;
   }
 
+  &__heading {
+    font-size: 1.4rem;
+    font-weight: $WEIGHT_REGULAR;
+    line-height: $LINE_HEIGHT_S;
+  }
+
   &__logo {
     position: relative;
     z-index: $LAYER_HEADER;
