--- a/src/styles/base/helpers.scss
+++ b/src/styles/base/helpers.scss
@@ -51,3 +51,18 @@
   position: $position !important;
   width: auto;
 }
+
+/**
+ * Resets button state.
+ */
+@mixin button-reset {
+  background-color: transparent;
+  border: 0;
+  border-radius: 0;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1;
+  margin: 0;
+  text-align: left;
+}
