--- a/src/styles/base/grid.scss
+++ b/src/styles/base/grid.scss
@@ -28,6 +28,7 @@ $SITE_WIDTH: 70rem;
 $SPACING_3XS: 0.25rem;
 $SPACING_2XS: 0.5rem;
 $SPACING_XS: 1rem;
+$SPACING_SXS: 1.5rem;
 $SPACING_S: 2rem;
 $SPACING_P: 2.5rem; // Text paragraph
 $SPACING_M: 3rem;
