--- a/src/styles/components/footnotes.scss
+++ b/src/styles/components/footnotes.scss
@@ -14,8 +14,8 @@
   text-decoration: none;
   width: 100%;
 
-  &::before {
-    @include transition(background-color);
+  &::before,
+  &::after {
     background-color: $COLOR_BLACK;
     content: '';
     height: 100%;
@@ -25,6 +25,16 @@
     width: 1px;
   }
 
+  &::before {
+    @include transition(background-color);
+    width: 1px;
+  }
+
+  &::after {
+    display: none;
+    width: 3px;
+  }
+
   &__content {
     padding-left: $SPACING_S;
   }
@@ -32,14 +42,17 @@
   &.is-active,
   &:hover {
     &::before {
-      transition: none;
-      width: 3px;
+      display: none;
+    }
+
+    &::after {
+      display: block;
     }
 
     &.footnote--about {
       background-color: rgba($COLOR_ORANGE, 0.25);
 
-      &::before {
+      &::after {
         background-color: $COLOR_ORANGE;
       }
     }
@@ -47,7 +60,7 @@
     &.footnote--work {
       background-color: rgba($COLOR_PURPLE, 0.25);
 
-      &::before {
+      &::after {
         background-color: $COLOR_PURPLE;
       }
     }
@@ -55,7 +68,7 @@
     &.footnote--stats {
       background-color: rgba($COLOR_GREEN, 0.25);
 
-      &::before {
+      &::after {
         background-color: $COLOR_GREEN;
       }
     }
@@ -63,7 +76,7 @@
     &.footnote--contact {
       background-color: rgba($COLOR_RED, 0.25);
 
-      &::before {
+      &::after {
         background-color: $COLOR_RED;
       }
     }
