FEATURE: Began building blog

--- a/src/styles/components/footnotes.scss
+++ b/src/styles/components/footnotes.scss
@@ -58,6 +58,14 @@
       }
     }
 
+    &.footnote--blog {
+      background-color: rgba($COLOR_BLUE, 0.25);
+
+      &::after {
+        background-color: $COLOR_BLUE;
+      }
+    }
+
     &.footnote--work {
       background-color: rgba($COLOR_PURPLE, 0.25);
 
