--- a/site/layouts/partials/footnotes.html
+++ b/site/layouts/partials/footnotes.html
@@ -13,6 +13,7 @@
         footnote footnote--{{ .Identifier}}
         s4 m2
         {{ if (eq $url .URL) }}is-active{{ end }}
+        {{ if (eq .Title "Contact")}}is-hidden{{ end }}
         {{ if and (eq $page "Distances") (eq .Title "Stats") }}is-active{{ end }}
         {{ if and (eq $page "Mountains") (eq .Title "Stats") }}is-active{{ end }}
       "
