--- a/src/styles/components/article.scss
+++ b/src/styles/components/article.scss
@@ -1,131 +1,9 @@
 /**
- * Components > Article
+ * Components > Article.
  * ------------------------------------------------------------------------------
- * An article is generally text and its title.
+ * A single blog article.
  *
  */
 .article {
-  $parent: &;
-
-  &__button {
-    @include button-reset;
-    padding: $SPACING_XS $SPACING_SXS;
-    position: relative;
-    width: 100%;
-
-    &::before,
-    &::after {
-      @include transition(border-color);
-      border-color: $COLOR_BLACK;
-      border-style: solid;
-      content: '';
-      height: 100%;
-      left: 0;
-      position: absolute;
-      top: 0;
-      width: 100%;
-    }
-
-    &::before {
-      border-width: 0 0 0 1px;
-    }
-
-    &::after {
-      border-width: 1px 1px 1px 0;
-      opacity: 0.1;
-    }
-  }
-
-  &__title,
-  &__title:not(:last-child) {
-    @include transition(color);
-    margin-bottom: 0;
-  }
-
-  &__content {
-    display: none;
-    padding-top: $SPACING_S;
-  }
-
-  &:hover {
-    #{$parent}__button {
-      background-color: rgba($COLOR_GREEN, 0.15);
-
-      &::before {
-        background-color: $COLOR_GREEN;
-        border-left: 0;
-        opacity: 1;
-        width: 3px;
-      }
-
-      &::after {
-        opacity: 0;
-      }
-    }
-  }
-
-  &:hover,
-  &.is-active {
-    #{$parent}__button {
-      background-color: rgba($COLOR_GREEN, 0.25);
-
-      &::before {
-        background-color: $COLOR_GREEN;
-        border-left: 0;
-        opacity: 1;
-        width: 3px;
-      }
-
-      &::after {
-        opacity: 0;
-      }
-    }
-  }
-
-  &.is-active {
-    #{$parent}__content {
-      display: block;
-    }
-  }
-
-  .is-dark & {
-    #{$parent}__button::before,
-    #{$parent}__button::after, {
-      border-color: $COLOR_DARK_MODE_WHITE;
-    }
-
-    #{$parent}__title {
-      color: $COLOR_DARK_MODE_WHITE;
-    }
-
-    &.is-active {
-      #{$parent}__button {
-        border-color: $COLOR_DARK_MODE_WHITE;
-      }
-    }
-  }
-
-  .no-transition & {
-    #{$parent}__button::before,
-    #{$parent}__button::after,
-    #{$parent}__title {
-      transition: none;
-    }
-  }
-
-  .no-js & {
-    #{$parent}__button {
-      border: 0;
-      padding: 0;
-    }
-
-    #{$parent}__title,
-    #{$parent}__title:not(:last-child) {
-      margin-bottom: $SPACING_3XS;
-    }
-
-    #{$parent}__content {
-      display: block;
-    }
-  }
+  // Styles.
 }
