--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -23,6 +23,8 @@
  */
 @import 'components/article';
 @import 'components/articles';
+@import 'components/entries';
+@import 'components/entry';
 @import 'components/block';
 @import 'components/blocks';
 @import 'components/burger';
