--- a/src/styles/components/articles.scss
+++ b/src/styles/components/articles.scss
@@ -1,17 +1,20 @@
 /**
- * Components > Articles
+ * Components > Articles.
  * ------------------------------------------------------------------------------
- * Articles contain multiple article elements.
+ * A list of blog articles.
  *
  */
 .articles {
-  &__title {
-    margin-bottom: $SPACING_P;
+  &:not(:last-child) {
+    // Desired margin - grid gap
+    margin-bottom: ($SPACING_L - $SPACING_S);
   }
 
-  &__article {
+  &__excerpt {
+    position: relative;
+
     &:not(:last-child) {
-      margin-bottom: $SPACING_P;
+      margin-bottom: $SPACING_S;
     }
   }
 }
