--- a/site/layouts/_default/blog.html
+++ b/site/layouts/_default/blog.html
@@ -1,9 +1,21 @@
 {{ define "main" }}
   {{- .Content -}}
 
-  <div class="blocks row">
-    {{ range (.Pages.ByParam "handle") }}
-      <h2><a href="/blog/{{ .Params.Handle }}">{{ .Params.Title }}</a></h2>
+  <div class="row">
+    {{ range .Pages.ByPublishDate.Reverse }}
+      <div class="articles s8">
+        <h2 class="articles__title">
+          <a href="{{ .Permalink }}">{{ .Title }}</a>
+        </h2>
+
+        <p class="articles__excerpt body-1">
+          {{ .Params.Excerpt }}
+        </p>
+
+        <p class="articles__meta sub-text">
+          {{ partial "article-meta.html" . }}
+        </p>
+      </div>
     {{ end }}
   </div>
 {{ end }}
