--- a/site/layouts/partials/article-meta.html
+++ b/site/layouts/partials/article-meta.html
@@ -1,3 +1,10 @@
 <!-- Partials > Article meta. -->
 <!-- Blog article meta content. -->
 Posted {{ .PublishDate.Format "01 January 2006" }} &nbsp; | &nbsp;
+
+{{ with .Params.tags }}
+  {{ range . }}
+    {{ $href := print (absURL "tags/") (urlize .) }}
+    <a href="{{ $href }}">{{ . }}</a>
+  {{ end }}
+{{ end }}
