REFACTOR: Removed need for individual no-transition styles for dark mode

--- a/src/styles/components/dark-mode.scss
+++ b/src/styles/components/dark-mode.scss
@@ -28,10 +28,11 @@
       transform: translateY(-50%);
     }
   }
+}
 
-  .no-transition & {
-    &__slide {
-      transition: none;
-    }
-  }
+.no-transition *,
+.no-transition *::before,
+.no-transition *::after {
+  // stylelint-disable-next-line
+  transition: none !important;
 }
