BUILD: Set blog link active state when on tags list or tag article list

--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -45,7 +45,9 @@
               class="
                 header__link
                 navigation
-                {{ if in $url .URL }}is-active{{ end }}"
+                {{ if in $url .URL }}is-active{{ end }}
+                {{ if and (in $url "/tags/") (eq .Title "Blog") }}is-active{{ end }}
+              "
               href="{{ .URL }}"
               js-header="navigationLink"
             >
