--- a/site/layouts/partials/footnotes.html
+++ b/site/layouts/partials/footnotes.html
@@ -16,6 +16,7 @@
         {{ if (eq .Title "Contact")}}is-hidden{{ end }}
         {{ if and (eq $page "Distances") (eq .Title "Stats") }}is-active{{ end }}
         {{ if and (eq $page "Mountains") (eq .Title "Stats") }}is-active{{ end }}
+        {{ if and (in $url "/tags/") (eq .Title "Blog") }}is-active{{ end }}
       "
       href="{{ .URL }}"
     >
