FEATURE: Added latest blog post to homepage

--- a/site/layouts/_default/index.html
+++ b/site/layouts/_default/index.html
@@ -1,3 +1,11 @@
 {{ define "main" }}
   {{- .Content -}}
+
+  <p class="body-1">
+    <strong>Latest post:</strong>
+
+    {{ range first 1 ($.Site.GetPage "section" "blog").Pages.ByPublishDate.Reverse }}
+      <a href="{{ .Permalink }}">{{ .Title }}</a>
+    {{ end }}
+  </p>
 {{ end }}
