--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -15,6 +15,7 @@
 @import 'base/helpers';
 @import 'base/layout';
 @import 'base/icon';
+@import 'base/rte';
 @import 'base/typography';
 @import 'base/a11y';
 
